# sortsmill

./: .dir-locals.el  .hgignore  .indent.pro  AUTHORS  CONTRIBUTING  INSTALL.git  Makefile.am  README  README-MS.html  README-Mac.html  README-Unix.html  README-unix  autogen.sh  configure.ac  libsortsmillff_fontforge.pc.in  libsortsmillff_fontforgeexe.pc.in
Unicode/: Makefile.am  alphabet.c  char.c  dump.c  gwwiconv.c  libgunicode.sym  makeutype.c  memory.c  ucharmap.c  unialt.c  usprintf.c  ustring.c
auxiliary/: ArabicForms.c  Makefile.am  alphabet.c  backtrns.c  bernstein.c  bincoef.c  brentroot.c  char.c  cjk.c  combiners.h  copy_with_strides.c  dump.c  f64_matrix.c  floor_mod.c  gmp_constants.c  gmp_gc.c  gmp_matrix.c  gmp_matrix_add.c  gmp_matrix_copy.c  gmp_matrix_init.c  gmp_matrix_mult.c  gmp_matrix_pred.c  gmp_matrix_set.c  gmp_matrix_swap.c  gmp_matrix_trsv.c  guile_alloc_base.c  guile_arrays.c  guile_containers_rbmap.c  guile_contours.c  guile_copy_with_strides.c  guile_directory_layout.c  guile_fonts_contours.c  guile_format.c  guile_gmp.c  guile_gsl.c  guile_iconv.c  guile_initialized_global_constants.c  guile_math_brentroot.c  guile_math_functions.c  guile_math_gmp.c  (+98 more)
doc/: Makefile.am  fontcompare.1  fontforge.1  fontimage.1  psMat.interface.texi  ps_number.intro.texi  ps_number.visible.texi  sortsmill-compare.1  sortsmill-editor.1  sortsmill-fontforge.texi  sortsmill-image.1  sortsmill-lint.1  sortsmill-tools.texi
examples/: Makefile.am  alternate_simple_menu_extension_in_C.c  hello.py  simple_menu_extension_in_C.c  simple_menu_extension_in_Fortran.f90  sortsmill-scheme.el
fontforge/: Makefile.am  PfEd.h  acorn2sfd.c  activeinui.c  activeinui.h  alignment.c  anchorsaway.c  annotations.h  arrayfree.c  asmfpst.c  autohint.c  autosave.c  autotrace.c  autowidth.c  autowidth.h  autowidth2.c  autowidth2.h  autowidth2dlg.c  basedlg.c  baseviews.c  baseviews.h  bdfinfo.c  bezctx.c  bezctx.h  bezctx_ff.c  bezctx_intf.h  bitmapchar.c  bitmapcontrol.c  bitmapcontrol.h  bitmapdlg.c  bitmapview.c  bvedit.c  charinfo.c  charview.c  charviewbase.c  chunkalloc.h  clipnoui.c  clipui.c  combinations.c  compare.h  (+255 more)
fortran/: Makefile.am  fortran_internal_types.c  generate-fortran-api.scm  generate-fortran-syntax.scm  generate-internal_types.f90.scm.in  usermenu.f90  views.f90
gdraw/: Makefile.am  choosericons.c  colorP.h  ctlvalues.c  descrip.mms  drawboxborder.c  fontP.h  gaskdlg.c  gbuttons.c  gchardlg.c  gcolor.c  gcontainer.c  gdraw.c  gdrawP.h  gdraw_type_inspector.tig  gdrawable.c  gdrawbuildchars.c  gdrawerror.c  gdrawgimage.c  gdrawtxt.c  gdrawtxtinit.c  gdrawwacomdriver.c  genkeysym.c  gfilechooser.c  gfiledlg.c  ggadgetP.h  ggadgets.c  ggroupbox.c  ghvbox.c  gimagebmpP.h  gimageclut.c  gimagecvt.c  gimagepsdraw.c  gimagewriteeps.c  gimagexdraw.c  gkeysym.c  glist.c  gmatrixedit.c  gmenu.c  gprogress.c  (+22 more)
guile/: Makefile.am  gdraw_type_inspector.tig  generate-go-dependencies.scm  generate-guile-api.scm  generate-guile-modules-graph.scm  generate-internal-types.scm  generate-internal-types.scm.in  generate-libguile-sortsmill_symbols.scm  generate-reexporter.scm  guile-deps.mk  guile_brentroot.c  guile_gsl.c  guile_iconv.c  guile_internal_structures.c  guile_notices.c  guile_polyspline.c  guile_pure.c  guile_python.c  guile_usermenu.c  guile_views.c  libguile_sortsmill_cython.pyx  site-final.scm.in  site-init.scm  site-init.scm.in  tig.scm
guile_iconv/: Makefile.am  guile_iconv.c  iconv.scm
gutils/: Makefile.am  descrip.mms  divisors.c  fsys.c  gcol.c  gfile.c  gimage.c  gimagebmpP.h  gimageread.c  gimagereadbmp.c  gimagereadgif.c  gimagereadjpeg.c  gimagereadpng.c  gimagereadras.c  gimagereadrgb.c  gimagereadtiff.c  gimagereadxbm.c  gimagereadxpm.c  gimagewritebmp.c  gimagewritegimage.c  gimagewritejpeg.c  gimagewritepng.c  gimagewritexbm.c  gimagewritexpm.c  gio.c  gioP.h  giofile.c  gioftp.c  gioftpP.h  giofuncP.h  giohosts.c  giomime.c  giothread.c  giotrans.c  gwwintl.c  libgioftp.sym  libgutils.sym
inc/: Makefile.am  annotations_base.h  basics.h  bernstein.h  brentroot.h  chardata.h  charset.h  config-extra.h.in  config.h_vms  contour_interface.h  ffthread.h  fileutil.h  gdraw.h  gfile.h  ggadget.h  gicons.h  gimage.h  gio.h  gkeysym.h  gmp_constants.h  gmpy.h  gprogress.h  gresedit.h  gresource.h  gwidget.h  gwwiconv.h  intl.h  invoke_funcs.h  libguile_sortsmill_aux.h  libguile_wrapper.h  linalg.h  moveto_funcs.h  null_passthru.h  pascals_triangle.h  polyspline.h  precomputed_data.h  precomputed_polyspline_data.h  ps_number.h  qbrentroot.h  real_types.h  (+12 more)
main/: Makefile.am  compare.c  fontcompare.c  fontimage.c  fontlint.c  fontlint_opts.ggo  fontlint_opts.h  image.c  lint.c  main.c  sfddiff_opts.c  smedbt  sortsmill-editor.c  sortsmill-editor.in
po/: LINGUAS  Makefile.am  Makevars  POTFILES.in  POTFILES.skip  en.po  eo.po  fr.po  pl.po  ru.po  uk.po  zh_TW.po
pycontrib/: Makefile.am  __init__.py  psMat.py  psMat.py.in  site_init.py  site_init.py.in  sys-init.py
python/: Makefile.am  fontforge.py.in  generate-internal_types.pyx.scm.in  generate-python-api.scm  make-eot  make-fonts  psMat.py.in  site_init.py.in  sortsmill.m4
scheme/: Makefile.am  fontforge-main.scm  fontforge.scm.in  fontforgeexe_ffi.c  gsl.i  guile_bernstein.c  guile_brentroot.c  guile_gsl.c  guile_gsl.i  guile_iconv.c  guile_polyspline.c  sfd.scm  site-init.scm.in
sfd2sxml/: Makefile.am  guile_iconv.c  sfd2scm.c  sfd2sxml.in  sfd2sxml.scm  sfd2xml.in
tests/: Makefile.am  atlocal.in  bernstein.at  brentroot.at  fsys_c.at  gfile_c.at  gmp_constants.at  linalg.at  main_with_guile.x  math_functions.at  monomial.at  old_python_tests.at  pascals_triangle.at  polyspline.at  precomputed_data.at  psMat.at  ps_number_c.at  ps_number_h.at  randomtest.c  rexp_h.at  sortsmill_iconv.at  sortsmill_linalg.at  sortsmill_precompute.at  sortsmillff_iconv.at  sortsmillff_linalg.at  sortsmillff_precompute.at  test005.pe  test006.pe  test1006.py.in  test126.pe  test_GFileAppendFile.c  test_GFileBaseName.c  test_GFileBuildName.c  test_GFileGetHomeDir.c  test_GFileGetUserCacheDir.c  test_bernstein.c  (+142 more)
(+813 files in other folders)
